<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="header">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <!-- app names -->
    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_scores">Scores</string>
    <string name="app_library">Library</string>
    <string name="app_bigger">Build It Bigger</string>
    <string name="app_reader">XYZ Reader</string>
    <string name="app_capstone">Capstone</string>
</resources>
