<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_header"
        android:text="@string/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        style="@style/ButtonBase.Orange"
        android:id="@+id/btn_spotify"
        android:text="@string/app_spotify"
        android:onClick="goSpotify"
        android:layout_below="@id/tv_header"/>

    <Button
        style="@style/ButtonBase.Orange"
        android:id="@+id/btn_scores"
        android:text="@string/app_scores"
        android:onClick="goScores"
        android:layout_below="@id/btn_spotify"/>

    <Button
        style="@style/ButtonBase.Orange"
        android:id="@+id/btn_library"
        android:text="@string/app_library"
        android:onClick="goLibrary"
        android:layout_below="@id/btn_scores"/>

    <Button
        style="@style/ButtonBase.Orange"
        android:id="@+id/btn_bigger"
        android:text="@string/app_bigger"
        android:onClick="goBigger"
        android:layout_below="@id/btn_library"/>

    <Button
        style="@style/ButtonBase.Orange"
        android:id="@+id/btn_reader"
        android:text="@string/app_reader"
        android:onClick="goReader"
        android:layout_below="@id/btn_bigger"/>

    <Button
        style="@style/ButtonBase.Blue"
        android:id="@+id/btn_capstone"
        android:text="@string/app_capstone"
        android:onClick="goCapstone"
        android:layout_below="@id/btn_reader"/>

</RelativeLayout>
